* 0.7.2svn - ... - release 17/06/2010
- Provide kernel configuration options to error mesages where possible
- Added external dstat_md_dstat plugin to show the resync progress of SWRAID (Bert de Bruijn)

* 0.7.2 - Real soon now - release 15/06/2010
- Added external dstat_disk_tps plugin to show transactions per second
- Added support for filtering /dev/vdaX devices (KVM virtio)
- Added external dstat_squid plugin to show squid counters (Jason Friedland)
- Introduced blockdevices() to list available blockdevices
- Added support for CCISS block devices (named cciss/c0d0)
- Introduced cmd_test() to verify command and options
- Introduced cmd_readlines() to read from command output
- Introduced cmd_splitlines() to split lines read from command output
- Implement best effort /proc integer overflow handling in dstat_net (Ross Brattain)
- Added external dstat_dstat_cpu plugin to show dstat's cpu usage
- Added external dstat_dstat_ctxt plugin to show dstat's context switches
- Added external dstat_dstat_mem plugin to show dstat's memory usage
- Added external dstat_top_bio_adv plugin to show advanced top I/O usage
- Added external dstat_top_cpu_adv plugin to show advanced top cpu usage
- Added external dstat_top_io_adv plugin to show advanced top block I/O usage
- Allow specifying separator for splitline() and splitlines() functions
- Make top-plugins free memory for processes that no longer exist
- Added external dstat_top_int plugin to show most frequent interrupt by name
- Fixed python 2.6 string exception issue (Dbt 585219)
- Documentation improvements

* 0.7.1 - Just the three of us - release 22/02/2010
- Fix external plugins on python 2.2 and older (eg. RHEL3)
- Documentation improvements
- Implement linecache for top-plugins (caching for statistics)
- Added external dstat_qmail plugin to show the length of qmail queues (Tom Van Looy)
- Added external dstat_dstat plugin to show Dstat's own cputime and latency values