@@ -27,13 +27,20 @@ class dstat_plugin(dstat):
             raise Exception, 'Needs kernel md support'
 
     def extract(self):
-        pct = 100
+        pct = 0
         speed = 0
+        nr = 0
         for l in self.splitlines():
             if len(l) < 2: continue
             if l[1] in ('recovery', 'resync'):
-                pct = int(l[3][0:2].strip('.%'))
-                speed = int(l[6].strip('sped=K/sc')) * 1024
+                nr += 1
+                pct += int(l[3][0:2].strip('.%'))
+                speed += int(l[6].strip('sped=K/sc')) * 1024
+        if nr:
+            speed = speed / nr
+            pct = pct / nr
+        else:
+            pct = 100
         self.val['text'] = '%s %s' % (cprint(pct, 'p', 3, 34), cprint(speed, 'd', 5, 1024))
 
 # vim:ts=4:sw=4:et
