@@ -1,6 +1,7 @@
 * 0.7.2svn - ... - release 17/06/2010
 - Provide kernel configuration options to error mesages where possible
 - Added external dstat_md_dstat plugin to show the resync progress of SWRAID (Bert de Bruijn)
+- Changed color of 100% to white to make it stand out (Bert de Bruijn)
 
 * 0.7.2 - Real soon now - release 15/06/2010
 - Added external dstat_disk_tps plugin to show transactions per second
